--- a/.github/workflows/python-pip-unemy.yml
+++ b/.github/workflows/python-pip-unemy.yml
@@ -10,10 +10,10 @@ jobs:
     env:
       DEV: 'no'
       PROD: 'no'
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #AWS_REGION: ${{ secrets.AWS_REGION }}
+      #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     defaults:
       run:
         shell: bash
@@ -25,15 +25,15 @@ jobs:
       with:
         python-version: 3.8
     
-    - name: install pip3, awscli and boto3
+    - name: Install pip3, awscli and boto3
       run: | 
          sudo apt-get -y python3-pip awscli
-         sudo python3 -m pip install boto3
-         python3 -m pip install --upgrade awscli
+         #sudo python3 -m pip install boto3
+         #python3 -m pip install --upgrade awscli
          
     - name: copy main.py
       run: | 
-    - name: copy Terraform Python CDK main file - Dev
+    - name: Copy Terraform Python CDK main file - Dev
       if: ${{ env.DEV == 'yes' }}
       run: |-
         cat main.py <<EOF
