--- a/.github/workflows/python-pip-unemy.yml
+++ b/.github/workflows/python-pip-unemy.yml
@@ -25,14 +25,12 @@ jobs:
       with:
         python-version: 3.8
     
-    - name: Install pip3, awscli and boto3
-      run: | 
-         sudo apt-get -y python3-pip awscli
+    #- name: Install pip3, awscli and boto3
+      #run: | 
+         #sudo apt-get -y python3-pip awscli
          #sudo python3 -m pip install boto3
          #python3 -m pip install --upgrade awscli
          
-    - name: copy main.py
-      run: | 
     - name: Copy Terraform Python CDK main file - Dev
       if: ${{ env.DEV == 'yes' }}
       run: |-
