--- a/.github/workflows/python-pip-unemy.yml
+++ b/.github/workflows/python-pip-unemy.yml
@@ -1,4 +1,4 @@
-name: Python Package using Conda
+name: Python Terraform CDK Using Pip
 
 on: [push]
 
@@ -25,14 +25,20 @@ jobs:
       with:
         python-version: 3.8
     
-    #- name: Install pip3, awscli and boto3
-      #run: | 
-         #sudo apt-get -y python3-pip awscli
-         #sudo python3 -m pip install boto3
-         #python3 -m pip install --upgrade awscli
+    - name: Install Dependencies
+      run: | 
+         sudo apt-get install -y python3-pip awscli
+         python3 -m pip install boto3 --upgrade awscli
          
-    - name: Copy Terraform Python CDK main file - Dev
+    - name: Copy Terraform Python CDK modules - Dev
       if: ${{ env.DEV == 'yes' }}
       run: |-
         cat main.py <<EOF
         EOF
+        &&
+        cat startup-script.sh <<EOF
+        EOF
+
+    - name: Invoke Terraform Python CDK modules - Dev
+      if: ${{ env.DEV == 'yes' }}
+      run: python3 main.py
