--- a/.github/workflows/python-pip-unemy.yml
+++ b/.github/workflows/python-pip-unemy.yml
@@ -27,9 +27,17 @@ jobs:
     
     - name: Install Dependencies
       run: | 
-         #sudo apt-get install -y python3-pip awscli
-         sudo apt-get -y install python3.9 python3-pip awscli
+         sudo apt -y install python3.9 python3-pip awscli
          python3 -m pip install boto3 --upgrade awscli
+         sudo apt install npm
+         sudo npm install -g cdktf-cli
+         sudo npm install -g cdktf-cli@next
+         mkdir terraform_python_cdk
+         cd terraform_python_cdk
+         # store state locally for now (change backend later)
+         sudo cdktf init --template="python3-pip" --local
+         sudo npm install -a @cdktf/provider-aws
+         sudo cdktf get
          
     - name: Copy Terraform Python CDK modules - Dev
       if: ${{ env.DEV == 'yes' }}
