--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -17,6 +17,8 @@ jobs:
       PROD: 'no'
       DIFF: 'no'
       APPLY: 'no'
+      PROJECT_NAME: 'UNEMY-Stack-on-AWS-Lighsail'
+      PROJECT_DESCRIPTION: 'Deploy UNEMY Stack on AWS Lighsail'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #AWS_REGION: ${{ secrets.AWS_REGION }}
       #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -39,11 +41,22 @@ jobs:
          sudo apt install npm
          sudo npm install -g cdktf-cli
          sudo npm install -g cdktf-cli@next
-         sudo mkdir ${env.DEV}
-         cd ${env.DEV}
+         sudo mkdir env.DEV
+         cd env.DEV
          # store state locally for now (change backend later)
          sudo cdktf init --template="python-pip" --local
+         echo -e env.PROJECT_NAME
+         echo -e "Y"
+         echo -e env.PROJECT_DESCRIPTION
+         echo -e "Y"
          sudo npm install -a @cdktf/provider-aws
+         sudo echo ' {
+            "language": "python",
+            "app": "python3 ./main.py",
+            "terraformProviders": [
+            "aws@~> 3.0"
+           ]
+         }
          sudo cdktf get
          
     - name: Copy Terraform Python CDK modules - Dev
