--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -44,7 +44,9 @@ jobs:
          sudo mkdir $DEV
          cd $DEV
          # use local state storage (change backend later)
-         sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME  --project-description $PROJECT_DESCRIPTION
+         sudo cdktf init --template="python-pip" --local --dist
+         echo yes
+         echo yes
          sudo npm install -a @cdktf/provider-aws
          sudo echo ' {
             "language": "python",
