--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -17,8 +17,10 @@ jobs:
       PROD: 'no'
       DIFF: 'no'
       APPLY: 'no'
-      PROJECT_NAME: 'UNEMY-Stack-on-AWS-Lighsail'
-      PROJECT_DESCRIPTION: 'Deploy UNEMY Stack on AWS Lighsail'
+      PROJECT_NAME: 'yes'
+      PROJECT_DESCRIPTION: 'yes'
+      #PROJECT_NAME: 'UNEMY-Stack-on-AWS-Lighsail'
+      #PROJECT_DESCRIPTION: 'Deploy UNEMY Stack on AWS Lighsail'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #AWS_REGION: ${{ secrets.AWS_REGION }}
       #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -45,9 +47,7 @@ jobs:
          sudo mkdir $DEV
          cd $DEV
          # use local state storage (change backend later)
-         sudo cdktf init --template="python-pip" --local --dist
-         sudo echo $PROJECT_NAME
-         sudo echo $PROJECT_DESCRIPTION
+         sudo cdktf init --template="python-pip" --local --dist --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws
          sudo echo ' {
             "language": "python",
