--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -39,13 +39,14 @@ jobs:
     
     - name: Install Dependencies
       run: | 
-         sudo apt -y install python3-pip awscli
+         sudo apt-get -y install python3-pip awscli
          python3 -m pip install boto3 --upgrade awscli
+         python3 -m pip install -r requirements.txt
          curl -sL https://deb.nodesource.com/setup_16.x | sudo -E bash -
          sudo echo -e "\n"
-         sudo sudo apt install -y nodejs
+         sudo sudo apt-get install -y nodejs
          sudo echo -e "\n"
-         sudo apt install npm
+         sudo apt-get install npm
          sudo npm install -g cdktf-cli
          sudo npm install -g cdktf-cli@next
          sudo mkdir $DEV
@@ -56,7 +57,7 @@ jobs:
          sudo echo ' {
             "language": "python",
             "app": "python3 ./main.py",
-            "terraformProviders": ["aws@~> 3.0"]
+            "terraformProviders": ["aws@~> 3.0"] 
          }
          sudo cdktf get
          
