--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -42,7 +42,7 @@ jobs:
          sudo apt-get -y install python3-pip awscli
          python3 -m pip install --upgrade pip
          python3 -m pip install boto3 --upgrade awscli
-         curl -sL https://deb.nodesource.com/setup_16.x | sudo -E bash -
+         sudo curl -sL https://deb.nodesource.com/setup_17.x | sudo -E bash -
          sudo echo -e "\n"
          sudo sudo apt-get install -y nodejs
          sudo echo -e "\n"
