--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -44,6 +44,7 @@ jobs:
          sudo apt-get install npm
          sudo npm install -g cdktf-cli
          sudo npm install -g cdktf-cli@next
+         sudo npm install -g cdktf-cli@0.7 
          sudo mkdir $DEV
          cd $DEV
          # use local state storage (change backend later)
