--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -44,7 +44,9 @@ jobs:
          sudo apt-get install npm
          sudo npm install -g cdktf-cli
          sudo npm install -g cdktf-cli@next
-         sudo npm install -g cdktf-cli@0.7 
+         #sudo npm install --save-dev @yyy/yyy@version
+         sudo npm install cdktf@^0.7
+         sudo npm install constructs@^10.0.0
          sudo mkdir $DEV
          cd $DEV
          # use local state storage (change backend later)
