--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -52,7 +52,7 @@ jobs:
          sudo npm install -a @cdktf/provider-aws
          sudo echo ' {
             "language": "python",
-            "app": "python3 ./main.py",
+            "app": "python3 main.py",
             "terraformProviders": [
               "aws@~> 3.0"
             ] 
