--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -55,8 +55,8 @@ jobs:
               "aws@~> 3.0"
             ] 
          }'
-         sleep 10
-         sudo cdktf get
+         #sleep 10
+         #sudo cdktf get
          
     - name: Copy Python Script, Bash Script & Input JSON File - Dev
       if: ${{ env.DEV == 'yes' }}
