--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -48,6 +48,7 @@ jobs:
          cd $DEV
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws
+         sudo chmod a+rwx $DEV
          sudo echo ' {
             "language": "python",
             "app": "python3 ./main.py",
