--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -17,6 +17,7 @@ jobs:
       PROD: 'no'
       DIFF: 'no'
       APPLY: 'no'
+      DIRECTORY: 'tf_py_cdk'
       PROJECT_NAME: 'UNEMY-Stack-on-AWS-Lighsail'
       PROJECT_DESCRIPTION: 'Deploy UNEMY Stack on AWS Lighsail'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -44,11 +45,12 @@ jobs:
          sudo npm install -g cdktf-cli@next
          sudo npm install cdktf@^0.7
          sudo npm install constructs@^10.0.0
-         sudo mkdir $DEV
-         cd $DEV
+         sudo cd /home/ubuntu/
+         sudo mkdir $DIRECTORY
+         sudo cd $DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws
-         sudo chmod a+rwx $DEV
+         sudo chmod a+rwx $DIRECTORY
          sudo echo ' {
             "language": "python",
             "app": "python3 ./main.py",
