--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -1,4 +1,4 @@
-name: UNEMY-Stack-on-AWS-Lighsail
+name: CI - UNEMY-Stack-on-AWS-Lighsail
 
 on:
   push:
@@ -45,9 +45,9 @@ jobs:
          sudo npm install -g cdktf-cli@next
          sudo npm install cdktf@^0.7
          sudo npm install constructs@^10.0.0
-         sudo cd /home/ubuntu/
+         cd /home/ubuntu/
          sudo mkdir $DIRECTORY
-         sudo cd $DIRECTORY
+         cd $DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws
          sudo chmod a+rwx $DIRECTORY
