--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -45,7 +45,8 @@ jobs:
          sudo npm install -g cdktf-cli@next
          sudo npm install cdktf@^0.7
          sudo npm install constructs@^10.0.0
-         cd /home/ubuntu/
+         df -m
+         cd /home
          sudo mkdir $DIRECTORY
          cd $DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
