--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -45,12 +45,13 @@ jobs:
          sudo npm install -g cdktf-cli@next
          sudo npm install cdktf@^0.7
          sudo npm install constructs@^10.0.0
+         cd /
+         sudo mkdir $DIRECTORY
+         cd /$DIRECTORY
          df -m
          free -m
-         ls -af
-         cd /dev
-         ls -af
-         sudo chmod a+rwx /dev
+         ls
+         sudo chmod a+rwx /$DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws
          sudo echo ' {
