--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -50,10 +50,12 @@ jobs:
          cd /$DIRECTORY
          df -m
          free -m
-         ls
          sudo chmod a+rwx /$DIRECTORY
+         sudo chmod a+rwx /$DIRECTORY/
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws
+         pwd
+         ls
          sudo echo ' {
             "language": "python",
             "app": "python3 ./main.py",
