--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -40,13 +40,12 @@ jobs:
          python3 -m pip install boto3 --upgrade awscli
          sudo apt-get install npm
          sudo npm install -g cdktf-cli
-         sudo npm install -g cdktf-cli@next
          cd /
          sudo mkdir $DIRECTORY
          cd /$DIRECTORY
          df -m
          free -m
-         sudo cdktf init --template="python-pip" --cdktf-version="0.7.0" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
+         sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws
          #sudo npm install cdktf@^0.7
          #sudo npm install constructs@^10.0.0
