--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -41,7 +41,7 @@ jobs:
          sudo apt-get install npm
          sudo npm install -g cdktf-cli
          sudo npm install cdktf-cli@^0.7.0
-         sudo npm install constructs-cli@^10.0.9
+         sudo npm install constructs@^10.0.9
          sudo npm install react@^17.0.2
          cd /
          sudo mkdir $DIRECTORY
