--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -39,10 +39,9 @@ jobs:
          sudo apt-get -y install python3-pip awscli
          python3 -m pip install boto3 --upgrade awscli
          sudo apt-get install npm
-         sudo npm install -g cdktf-cli
-         sudo npm install cdktf-cli@^0.7.0
-         sudo npm install constructs@^10.0.9
-         sudo npm install react@^17.0.2
+         sudo npm install -g cdktf-cli^0.7.0
+         #sudo npm install cdktf-cli@^0.7.0
+         #sudo npm install constructs@^10.0.9
          cd /
          sudo mkdir $DIRECTORY
          cd /$DIRECTORY
@@ -56,7 +55,7 @@ jobs:
          sudo echo ' {
             "language": "python",
             "app": "python3 ./main.py",
-            "terraformProviders": ["aws@~> 3.42", docker@~> 2.0"] 
+            "terraformProviders": ["aws@~> 3.0"] 
          }' > cdktf.json
          #sudo cdktf get
              
