--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -40,6 +40,7 @@ jobs:
          python3 -m pip install boto3 --upgrade awscli
          sudo apt-get install npm
          sudo npm install -g cdktf-cli@^0.7.0
+         sudo npm install -g cdktf@^0.7.0
          sudo npm install -g constructs@^10.0.9
          cd /
          sudo mkdir $DIRECTORY
