--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -38,8 +38,8 @@ jobs:
       run: | 
          sudo apt-get -y install python3-pip awscli
          python3 -m pip install boto3 --upgrade awscli
-         #sudo apt-get install npm
-         sudo apt-get -g install npm
+         sudo apt-get install npm
+         sudo npm install -g npm
          sudo npm install -g cdktf-cli@^0.7.0
          sudo npm install -g cdktf@^0.7.0
          sudo npm install -g constructs@^10.0.9
