--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -65,6 +65,10 @@ jobs:
               "aws-sdk": "^2.1004.0",
             }
          }' > package.json
+         sudo npm install cdktf@^0.7.0
+         sudo npm install constructs@^10.0.9
+         sudo npm install aws-sdk
+         sudo npm install mysql
          sudo cdktf get
              
     - name: Input JSON File - Dev
