--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -58,17 +58,16 @@ jobs:
             "app": "python3 ./main.py",
             "terraformProviders": ["aws@~> 3.24"] 
          }' > cdktf.json
-         sudo chmod 777 *.*
-         sudo echo ' {
-            "dependencies": {
-              "@cdktf/provider-aws": "^3.24",
-              "aws-sdk": "^2.1004.0",
-            }
-         }' > package.json
+         #sudo chmod 777 *.*
+         #sudo echo ' {
+         #   "dependencies": {
+         #     "@cdktf/provider-aws": "^3.24",
+         #     "aws-sdk": "^2.1004.0"
+         #   }
+         #}' > package.json
          sudo npm install cdktf@^0.7.0
          sudo npm install constructs@^10.0.9
          sudo npm install aws-sdk
-         sudo npm install mysql
          sudo cdktf get
              
     - name: Input JSON File - Dev
