--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -60,6 +60,8 @@ jobs:
             "terraformProviders": ["aws@~> 3.24"] 
          }' > cdktf.json
          sudo npm install @types/node@14.17.27
+         sudo npm install cdktf@^0.7.0
+         sudo npm install constructs@^10.0.9
          sudo cdktf get
              
     - name: Input JSON File - Dev
