--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -59,9 +59,11 @@ jobs:
             "app": "python3 ./main.py",
             "terraformProviders": ["aws@~> 3.24"] 
          }' > cdktf.json
+         sudo npm install cdktf-cli@^0.7.0
+         cd /deploy/npm/node_modules/cdktf-cli
          sudo npm install @types/node@14.17.27
-         sudo npm install cdktf@^0.7.0
-         sudo npm install constructs@^10.0.9
+         #sudo npm install cdktf@^0.7.0
+         #sudo npm install constructs@^10.0.9
          sudo cdktf get
              
     - name: Input JSON File - Dev
