--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -17,7 +17,7 @@ jobs:
       APPLY: 'no'
       PROJECT_NAME: 'UNEMY-Stack-on-AWS-Lighsail'
       PROJECT_DESCRIPTION: 'Deploy UNEMY Stack on AWS Lighsail'
-      DIRECTORY: 'deploy'
+      #DIRECTORY: 'deploy'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #AWS_REGION: ${{ secrets.AWS_REGION }}
       #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -45,10 +45,11 @@ jobs:
          sudo npm install -g constructs@^10.0.9
          #sudo npm install -g @types/node@14.17.27
          cd /
-         sudo mkdir $DIRECTORY
-         cd /$DIRECTORY
+         #sudo mkdir $DIRECTORY
+         #cd /$DIRECTORY
          sudo cdktf init --template="python-pip" --local --project-name $PROJECT_NAME --project-description $PROJECT_DESCRIPTION
          sudo npm install -a @cdktf/provider-aws
+         sudo npm install @types/node@14.17.27
          df -m
          free -m
          pwd
@@ -59,12 +60,7 @@ jobs:
             "app": "python3 ./main.py",
             "terraformProviders": ["aws@~> 3.24"] 
          }' > cdktf.json
-         sudo npm install cdktf-cli@^0.7.0
-         #cd /deploy/npm/node_modules/cdktf-cli
-         sudo npm install @types/node@14.17.27
-         #sudo npm install cdktf@^0.7.0
-         #sudo npm install constructs@^10.0.9
-         ##sudo cdktf get
+         sudo cdktf get
              
     - name: Input JSON File - Dev
       if: ${{ env.DEV == 'yes' }}
