--- a/.github/workflows/tf-python-cdk.yml
+++ b/.github/workflows/tf-python-cdk.yml
@@ -17,7 +17,7 @@ jobs:
       APPLY: 'no'
       PROJECT_NAME: 'UNEMY-Stack-on-AWS-Lighsail'
       PROJECT_DESCRIPTION: 'Deploy UNEMY Stack on AWS Lighsail'
-      #DIRECTORY: 'deploy'
+      DIRECTORY: 'deploy'
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #AWS_REGION: ${{ secrets.AWS_REGION }}
       #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -86,7 +86,7 @@ jobs:
         
     - name: Current Working Directory, Files & Sizes
       run: | 
-         cd /$DIRECTORY/
+         cd /$DIRECTORY
          df -m
          free -m
          pwd
